Change output filename from .synthetic_dataset.csv to .dataset.csv

--- a/config.cfg
+++ b/config.cfg
@@ -2,5 +2,6 @@
 SCRIPT=synthetic_data.py
 
 [OUTPUT]
-data.matrix={dataset}.synthetic_dataset.csv
+data.matrix={dataset}.dataset.csv
 data.true_labels={dataset}.true_labels.csv
+data.true_labels_proteins={dataset}.true_labels_proteins.csv
